implement order queue and logging, fix method signatures